--- a/edgelet/api/managementVersion_2020_07_22.yaml
+++ b/edgelet/api/managementVersion_2020_07_22.yaml
@@ -474,7 +474,7 @@ paths:
           schema:
             $ref: '#/definitions/ErrorResponse'
 
-  '/secrets/{name}':
+  '/modules/{name}/secrets/{secretId}':
     get:
       tags:
         - Secret
@@ -486,7 +486,12 @@ paths:
         - $ref: '#/parameters/api-version'
         - in: path
           name: name
-          description: The name of the secret to fetch. (urlencoded)
+          description: The module name. (urlencoded)
+          required: true
+          type: string
+        - in: path
+          name: secretId
+          description: The name of the secret. (urlencoded)
           required: true
           type: string
       responses:
@@ -494,6 +499,10 @@ paths:
           description: Ok
           schema:
             type: string
+        '403':
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '404':
           description: NotFound
           schema:
@@ -513,7 +522,12 @@ paths:
         - $ref: '#/parameters/api-version'
         - in: path
           name: name
-          description: The name of the secret to set. (urlencoded)
+          description: The module name. (urlencoded)
+          required: true
+          type: string
+        - in: path
+          name: secretId
+          description: The name of the secret. (urlencoded)
           required: true
           type: string
         - in: body
@@ -544,7 +558,12 @@ paths:
         - $ref: '#/parameters/api-version'
         - in: path
           name: name
-          description: The name of the secret to pull. (urlencoded)
+          description: The module name. (urlencoded)
+          required: true
+          type: string
+        - in: path
+          name: secretId
+          description: The name of the secret. (urlencoded)
           required: true
           type: string
         - in: body
@@ -556,6 +575,10 @@ paths:
       responses:
         '204':
           description: Ok
+        '403':
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         default:
           description: Error
           schema:
@@ -569,7 +592,12 @@ paths:
         - $ref: '#/parameters/api-version'
         - in: path
           name: name
-          description: The name of the secret to refresh. (urlencoded)
+          description: The module name. (urlencoded)
+          required: true
+          type: string
+        - in: path
+          name: secretId
+          description: The name of the secret. (urlencoded)
           required: true
           type: string
       responses:
@@ -577,6 +605,10 @@ paths:
           description: Ok
         '400':
           description: NoSource
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '403':
+          description: Forbidden
           schema:
             $ref: '#/definitions/ErrorResponse'
         '404':
@@ -596,7 +628,12 @@ paths:
         - $ref: '#/parameters/api-version'
         - in: path
           name: name
-          description: The name of the secret to delete. (urlencoded)
+          description: The module name. (urlencoded)
+          required: true
+          type: string
+        - in: path
+          name: secretId
+          description: The name of the secret. (urlencoded)
           required: true
           type: string
       responses:
