--- a/edgelet/aziot-secret/Cargo.toml
+++ b/edgelet/aziot-secret/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "secret-store"
+name = "aziot-secret"
 version = "0.1.0"
 authors = ["Swagger Codegen team and contributors"]
 
@@ -8,8 +8,8 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_yaml = "0.7"
 serde_json = "1.0"
-base64 = "~0.7.0"
-futures = "0.1.16"
+base64 = "0.7"
+futures = "0.1"
 hyper = "0.12"
 url = "1.5"
 
