--- a/edge-modules/SimulatedTemperatureSensor/docker/linux/amd64/Dockerfile
+++ b/edge-modules/SimulatedTemperatureSensor/docker/linux/amd64/Dockerfile
@@ -10,8 +10,8 @@ WORKDIR /app
 COPY $EXE_DIR/ ./
 
 # Add an unprivileged user account for running the module
-RUN adduser -Ds /bin/sh moduleuser 
-USER moduleuser
+# RUN adduser -Ds /bin/sh moduleuser 
+# USER moduleuser
 
 CMD echo "$(date --utc +"[%Y-%m-%d %H:%M:%S %:z]"): Starting Module" && \
     exec /usr/bin/dotnet SimulatedTemperatureSensor.dll
